Day 2 all Four Tasks

--- a/Task Day 2 Python.ipynb
+++ b/Task Day 2 Python.ipynb
@@ -654,6 +654,668 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3 : Using Sample Superstore Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import f_oneway"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_sup_orders = pd.read_csv('Sample - Superstore.xls - Orders.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Row ID</th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Ship Date</th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>City</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Product ID</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Sub-Category</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Discount</th>\n",
+       "      <th>Profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CA-2016-152156</td>\n",
+       "      <td>11/8/2016</td>\n",
+       "      <td>11/11/2016</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>CG-12520</td>\n",
+       "      <td>Claire Gute</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Henderson</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>FUR-BO-10001798</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Bookcases</td>\n",
+       "      <td>Bush Somerset Collection Bookcase</td>\n",
+       "      <td>261.9600</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>41.9136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>CA-2016-152156</td>\n",
+       "      <td>11/8/2016</td>\n",
+       "      <td>11/11/2016</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>CG-12520</td>\n",
+       "      <td>Claire Gute</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Henderson</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42420</td>\n",
+       "      <td>South</td>\n",
+       "      <td>FUR-CH-10000454</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Chairs</td>\n",
+       "      <td>Hon Deluxe Fabric Upholstered Stacking Chairs,...</td>\n",
+       "      <td>731.9400</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>219.5820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>CA-2016-138688</td>\n",
+       "      <td>6/12/2016</td>\n",
+       "      <td>6/16/2016</td>\n",
+       "      <td>Second Class</td>\n",
+       "      <td>DV-13045</td>\n",
+       "      <td>Darrin Van Huff</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>...</td>\n",
+       "      <td>90036</td>\n",
+       "      <td>West</td>\n",
+       "      <td>OFF-LA-10000240</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Labels</td>\n",
+       "      <td>Self-Adhesive Address Labels for Typewriters b...</td>\n",
+       "      <td>14.6200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>6.8714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>US-2015-108966</td>\n",
+       "      <td>10/11/2015</td>\n",
+       "      <td>10/18/2015</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>SO-20335</td>\n",
+       "      <td>Sean O'Donnell</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Fort Lauderdale</td>\n",
+       "      <td>...</td>\n",
+       "      <td>33311</td>\n",
+       "      <td>South</td>\n",
+       "      <td>FUR-TA-10000577</td>\n",
+       "      <td>Furniture</td>\n",
+       "      <td>Tables</td>\n",
+       "      <td>Bretford CR4500 Series Slim Rectangular Table</td>\n",
+       "      <td>957.5775</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>-383.0310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>US-2015-108966</td>\n",
+       "      <td>10/11/2015</td>\n",
+       "      <td>10/18/2015</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>SO-20335</td>\n",
+       "      <td>Sean O'Donnell</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Fort Lauderdale</td>\n",
+       "      <td>...</td>\n",
+       "      <td>33311</td>\n",
+       "      <td>South</td>\n",
+       "      <td>OFF-ST-10000760</td>\n",
+       "      <td>Office Supplies</td>\n",
+       "      <td>Storage</td>\n",
+       "      <td>Eldon Fold 'N Roll Cart System</td>\n",
+       "      <td>22.3680</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>2.5164</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Row ID        Order ID  Order Date   Ship Date       Ship Mode Customer ID  \\\n",
+       "0       1  CA-2016-152156   11/8/2016  11/11/2016    Second Class    CG-12520   \n",
+       "1       2  CA-2016-152156   11/8/2016  11/11/2016    Second Class    CG-12520   \n",
+       "2       3  CA-2016-138688   6/12/2016   6/16/2016    Second Class    DV-13045   \n",
+       "3       4  US-2015-108966  10/11/2015  10/18/2015  Standard Class    SO-20335   \n",
+       "4       5  US-2015-108966  10/11/2015  10/18/2015  Standard Class    SO-20335   \n",
+       "\n",
+       "     Customer Name    Segment        Country             City  ...  \\\n",
+       "0      Claire Gute   Consumer  United States        Henderson  ...   \n",
+       "1      Claire Gute   Consumer  United States        Henderson  ...   \n",
+       "2  Darrin Van Huff  Corporate  United States      Los Angeles  ...   \n",
+       "3   Sean O'Donnell   Consumer  United States  Fort Lauderdale  ...   \n",
+       "4   Sean O'Donnell   Consumer  United States  Fort Lauderdale  ...   \n",
+       "\n",
+       "  Postal Code  Region       Product ID         Category Sub-Category  \\\n",
+       "0       42420   South  FUR-BO-10001798        Furniture    Bookcases   \n",
+       "1       42420   South  FUR-CH-10000454        Furniture       Chairs   \n",
+       "2       90036    West  OFF-LA-10000240  Office Supplies       Labels   \n",
+       "3       33311   South  FUR-TA-10000577        Furniture       Tables   \n",
+       "4       33311   South  OFF-ST-10000760  Office Supplies      Storage   \n",
+       "\n",
+       "                                        Product Name     Sales  Quantity  \\\n",
+       "0                  Bush Somerset Collection Bookcase  261.9600         2   \n",
+       "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.9400         3   \n",
+       "2  Self-Adhesive Address Labels for Typewriters b...   14.6200         2   \n",
+       "3      Bretford CR4500 Series Slim Rectangular Table  957.5775         5   \n",
+       "4                     Eldon Fold 'N Roll Cart System   22.3680         2   \n",
+       "\n",
+       "   Discount    Profit  \n",
+       "0      0.00   41.9136  \n",
+       "1      0.00  219.5820  \n",
+       "2      0.00    6.8714  \n",
+       "3      0.45 -383.0310  \n",
+       "4      0.20    2.5164  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_df = pd.DataFrame(sample_sup_orders)\n",
+    "orders_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### H0 : Sales of segment S1 = Sales of Segment S2 = Sales of Segment S3\n",
+    "#### H1 : At least one difference among the means\n",
+    "\n",
+    "#### One way ANOVA since more than two continuous variables "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     523.9200\n",
+       "1    2195.8200\n",
+       "2      29.2400\n",
+       "3    4787.8875\n",
+       "4      44.7360\n",
+       "Name: Total_Sales, dtype: float64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_df['Total_Sales'] = orders_df['Sales']*orders_df['Quantity']\n",
+    "orders_df['Total_Sales'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Segment\n",
+       "Consumer       582.284111\n",
+       "Corporate      351.821860\n",
+       "Home Office    215.389934\n",
+       "Name: Total_Sales, dtype: float64"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_per_segment = orders_df.groupby('Segment')['Total_Sales'].sum()/orders_df['Sales'].count()\n",
+    "mean_per_segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[523.92, 2195.82, 4787.8875, 44.736000000000004, 342.02]\n",
+      "[29.24, 136.22, 422.38, 7682.807999999999, 954.5999999999999]\n",
+      "[344.05, 7.632, 88.416, 1019.9519999999999, 1597.1976]\n"
+     ]
+    }
+   ],
+   "source": [
+    "consumer_array = []\n",
+    "corporate_array = []\n",
+    "home_office_array = []\n",
+    "for i in range(orders_df['Segment'].count()):\n",
+    "    if orders_df['Segment'][i]=='Consumer':\n",
+    "        consumer_array.append(orders_df['Total_Sales'][i])\n",
+    "    elif orders_df['Segment'][i]=='Corporate':\n",
+    "        corporate_array.append(orders_df['Total_Sales'][i])\n",
+    "    elif orders_df['Segment'][i]=='Home Office':\n",
+    "        home_office_array.append(orders_df['Total_Sales'][i])\n",
+    "print(consumer_array[:5])\n",
+    "print(corporate_array[:5])\n",
+    "print(home_office_array[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5191\n",
+      "3020\n",
+      "1783\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(consumer_array))\n",
+    "print(len(corporate_array))\n",
+    "print(len(home_office_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15209488.09286826 12004129.463995013 20568611.41649195\n"
+     ]
+    }
+   ],
+   "source": [
+    "consumer_var = np.var(consumer_array)\n",
+    "corporate_var = np.var(corporate_array)\n",
+    "home_office_var = np.var(home_office_array)\n",
+    "print(consumer_var,corporate_var,home_office_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1121.0455405124253 1164.2740637748345 1207.2950075715084\n"
+     ]
+    }
+   ],
+   "source": [
+    "consumer_mean = np.mean(consumer_array)\n",
+    "corporate_mean = np.mean(corporate_array)\n",
+    "home_office_mean = np.mean(home_office_array)\n",
+    "print(consumer_mean,corporate_mean,home_office_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_anova = f_oneway(consumer_array, corporate_array, home_office_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.700613068370727"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_anova.pvalue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Since, pvalue > 0.05 we accept the Null Hypothesis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 4 : Using Chi-Square Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### H0 : Segment is related to Category\n",
+    "#### H1 : Segment is not related to category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import chi2_contingency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Category</th>\n",
+       "      <th>Furniture</th>\n",
+       "      <th>Office Supplies</th>\n",
+       "      <th>Technology</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Consumer</th>\n",
+       "      <td>1845.757470</td>\n",
+       "      <td>576.844737</td>\n",
+       "      <td>2062.277440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Corporate</th>\n",
+       "      <td>1780.880903</td>\n",
+       "      <td>633.549805</td>\n",
+       "      <td>2188.804987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Home Office</th>\n",
+       "      <td>1807.840059</td>\n",
+       "      <td>548.407025</td>\n",
+       "      <td>2650.402681</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Category       Furniture  Office Supplies   Technology\n",
+       "Segment                                               \n",
+       "Consumer     1845.757470       576.844737  2062.277440\n",
+       "Corporate    1780.880903       633.549805  2188.804987\n",
+       "Home Office  1807.840059       548.407025  2650.402681"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data =pd.crosstab(index=orders_df['Segment'],columns=orders_df['Category'], values=orders_df['Total_Sales'], aggfunc='mean')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = chi2_contingency(data)\n",
+    "statistic, p_value, degree_of_freedom, expected_values = chi2_contingency(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.534815798360478e-12"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57.76839431882387"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "degree_of_freedom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1729.22226956,  559.64134842, 2196.01602809],\n",
+       "       [1774.85647468,  574.41029313, 2253.96892845],\n",
+       "       [1930.39968828,  624.74992577, 2451.50015166]])"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p value is 8.534815798360478e-12\n",
+      "Dependent (reject H0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "print(\"p value is \" + str(p_value))\n",
+    "if p_value <= alpha:\n",
+    "    print('Dependent (reject H0)')\n",
+    "else:\n",
+    "    print('Independent (Accept H0)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
