Day 2 - All 4 Tasks

--- a/Task Day 2 Python.ipynb
+++ b/Task Day 2 Python.ipynb
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1157,47 +1157,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Consumer</th>\n",
-       "      <td>1845.757470</td>\n",
-       "      <td>576.844737</td>\n",
-       "      <td>2062.277440</td>\n",
+       "      <td>1113</td>\n",
+       "      <td>3127</td>\n",
+       "      <td>951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Corporate</th>\n",
-       "      <td>1780.880903</td>\n",
-       "      <td>633.549805</td>\n",
-       "      <td>2188.804987</td>\n",
+       "      <td>646</td>\n",
+       "      <td>1820</td>\n",
+       "      <td>554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Home Office</th>\n",
-       "      <td>1807.840059</td>\n",
-       "      <td>548.407025</td>\n",
-       "      <td>2650.402681</td>\n",
+       "      <td>362</td>\n",
+       "      <td>1079</td>\n",
+       "      <td>342</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Category       Furniture  Office Supplies   Technology\n",
-       "Segment                                               \n",
-       "Consumer     1845.757470       576.844737  2062.277440\n",
-       "Corporate    1780.880903       633.549805  2188.804987\n",
-       "Home Office  1807.840059       548.407025  2650.402681"
+       "Category     Furniture  Office Supplies  Technology\n",
+       "Segment                                            \n",
+       "Consumer          1113             3127         951\n",
+       "Corporate          646             1820         554\n",
+       "Home Office        362             1079         342"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data =pd.crosstab(index=orders_df['Segment'],columns=orders_df['Category'], values=orders_df['Total_Sales'], aggfunc='mean')\n",
+    "data =pd.crosstab(index=orders_df['Segment'],columns=orders_df['Category'])\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,16 +1207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.534815798360478e-12"
+       "0.8334835825190556"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,16 +1227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "57.76839431882387"
+       "1.4612447366020676"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
        "4"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,18 +1267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1729.22226956,  559.64134842, 2196.01602809],\n",
-       "       [1774.85647468,  574.41029313, 2253.96892845],\n",
-       "       [1930.39968828,  624.74992577, 2451.50015166]])"
+       "array([[1101.67210326, 3129.97458475,  959.35331199],\n",
+       "       [ 640.92655593, 1820.94456674,  558.12887733],\n",
+       "       [ 378.4013408 , 1075.08084851,  329.51781069]])"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,15 +1289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p value is 8.534815798360478e-12\n",
-      "Dependent (reject H0)\n"
+      "p value is 0.8334835825190556\n",
+      "Independent (Accept H0)\n"
      ]
     }
    ],
